[package]
name = "ptsl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = [
  "crates/ptsl-client",
  "crates/ptsl-derive",
  "crates/ptsl-future",
  "crates/ptsl-protos",
]

[dependencies]
ptsl-client = { version = "=0.1", path = "crates/ptsl-client" }
ptsl-future = { version = "=0.1", path = "crates/ptsl-future" }
ptsl-protos = { version = "=0.1", path = "crates/ptsl-protos" }
