[package]
name = "ptsl-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bytes = { version = "1.5", default-features = false }
http = { version = "0.2", default-features = false }
http-body = { version = "0.4", default-features = false }
hyper = { version = "0.14", default-features = false, features = ["client", "http2", "runtime", "tcp"] }
tokio = { version = "1.32", default-features = false, features = ["rt-multi-thread"] }
tonic = { version = "0.10", default-features = false, features = ["codegen"] }
tower = { version = "0.4", default-features = false, features = ["buffer", "reconnect", "util"] }
