[package]
name = "ptsl-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
heck = { version = "0.4", default-features = false }
proc-macro2 = { version = "1.0", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0", default-features = false, features = ["proc-macro"] }
syn = { version = "2.0", default-features = false, features = ["clone-impls", "derive", "full", "parsing", "printing", "proc-macro"] }
