[package]
name = "ptsl-protos"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Protobuf
prost = { version = "0.12", default-features = false, features = ["prost-derive", "std"] }
tonic = { version = "0.10", default-features = false, features = ["codegen", "prost"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[build-dependencies]
tonic-build = { version = "0.10", default-features = false, features = ["prost"] }
